--- a/signUpPage.html
+++ b/signUpPage.html
@@ -17,6 +17,8 @@
             <input type="password" id="password" name="password" required>
             <button type="submit">Sign Up</button>
         </form>
+        <div id="message"></div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
