--- a/expensePage.html
+++ b/expensePage.html
@@ -14,7 +14,7 @@
             <label for="description">Description:</label>
             <input type="text" id="description" name="description" required>
             <label for="category">Category:</label>
-            <select id="category" name="catogry" required>
+            <select id="category" name="category" required>
                 <option value="food">Food</option>
                 <option value="transportation">Transportation</option>
                 <option value="utilities">Utilities</option>
