Making Expense App Production ready

--- a/expensePage.html
+++ b/expensePage.html
@@ -15,13 +15,14 @@
             <label for="description">Description:</label>
             <input type="text" id="description" name="description" required>
             <label for="category">Category:</label>
-            <select id="category" name="category" required>
+            <!-- <select id="category" name="category" required>
                 <option value="food">Food</option>
                 <option value="transportation">Transportation</option>
                 <option value="utilities">Utilities</option>
                 <option value="entertainment">Entertainment</option>
                 <option value="other">Other</option>
-            </select>
+            </select> -->
+            <p>Your expenses will be automatically categorised by our AI</p>
             <button type="submit">Add Expense</button>
         </form>
         <div id="message"></div>
