Forgot Password & Integrating Mailing Service

--- a/loginPage.html
+++ b/loginPage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
 </head>
+
 <body>
     <div class="login-container">
         <h2>Login to Your Account</h2>
@@ -20,7 +22,11 @@
     <div class="signup-redirect">
         <p>Don't have an account? <a href="signUpPage.html">Sign up here</a></p>
     </div>
+    <div id="forgotPass">
+        <p>Forgot Password? <a href="forgotPassPage.html">Click here</a></p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
