--- a/expensePage.html
+++ b/expensePage.html
@@ -35,6 +35,9 @@
         <p>Click below to open the checkout page in current tab</p>
         <button id="renderBtn">Pay Now</button>
     </div>
+    <div id="logout">
+        <button id="logoutBtn">Sign Out</button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
     <script>
