--- a/resetPassword.html
+++ b/resetPassword.html
@@ -22,6 +22,7 @@
     <script>
         document.getElementById('passwordReset').addEventListener('submit', async (event)=>{
             event.preventDefault()
+            const token = new URLSearchParams(window.location.search).get('token');
             const div = document.getElementById('message-pass')
             const para = document.createElement('p')
             const data = {
@@ -29,7 +30,7 @@
                 password: event.target.password.value
             }
             try {
-                const response = await axios.post('http://localhost:3000/user/updatePass',data)
+                const response = await axios.post(`http://localhost:3000/user/updatePass?token=${token}`,data)
                 if(!response){
                     para.innerText = "Error updating password"
                 }else{
