--- a/resetPassword.html
+++ b/resetPassword.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="passRE">
-        <h2>Reset your Password</h2>
-        <form id="passwordReset">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Sign Up</button>
-        </form>
-        <div id="message-pass"></div>
-        <p>Reset your password? <a href="loginPage.html">Login here</a></p>
+    <div class="auth-page">
+        <div class="auth-card card">
+            <div class="passRE">
+                <h2>Reset your Password</h2>
+                <form id="passwordReset">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <div id="message-pass"></div>
+                <p>Reset your password? <a href="loginPage.html">Login here</a></p>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
