--- a/signUpPage.html
+++ b/signUpPage.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="signup-container">
-        <h2>Create an Account</h2>
-        <form id="signupForm">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Sign Up</button>
-        </form>
-        <div id="message"></div>
-
+    <div class="auth-page">
+        <div class="auth-card card">
+            <div class="signup-container">
+                <h2>Create an Account</h2>
+                <form id="signupForm">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <div id="message"></div>
+                <div class="login-redirect">
+                    <p>Already have an account? <a href="loginPage.html">Login here</a></p>
+                </div>
+            </div>
+        </div>  
     </div>
-    <div class="login-redirect">
-        <p>Already have an account? <a href="loginPage.html">Login here</a></p>
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
