--- a/expensePage.html
+++ b/expensePage.html
@@ -73,8 +73,8 @@
                 </div>
             </div>
         </div>
-
-        <div id="logout">
+        <div>
+            <button id="downloadExp"> Download </button>
             <button id="logoutBtn">Sign Out</button>
         </div>
     </div>
