--- a/loginPage.html
+++ b/loginPage.html
@@ -22,7 +22,7 @@
                 <div id="message"></div>
             </div>
             <div class="signup-redirect">
-                <p>Don't have an account? <a href="signUpPage.html">Sign up here</a></p>
+                <p>Don't have an account? <a href="index.html">Sign up here</a></p>
             </div>
             <div id="forgotPass">
                 <p>Forgot Password? <a href="forgotPassPage.html">Click here</a></p>
