--- a/resetPassword.html
+++ b/resetPassword.html
@@ -35,7 +35,7 @@
                 password: event.target.password.value
             }
             try {
-                const response = await axios.post(`http://localhost:3000/user/updatePass?token=${token}`,data)
+                const response = await axios.post(`/user/updatePass?token=${token}`,data)
                 if(!response){
                     para.innerText = "Error updating password"
                 }else{
